--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Змейка удачи 2025</title>
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
-<body class="main">
+<body class="main"> qwe
     <header class="wrapper__header header">
         <div class="header-container">
             <div class="header-inner">
