--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=1080, initial-scale=0">
     <title>Змейка удачи 2025</title>
 </head>
-<body class="main">
+<body class="main"> qwe
     <header class="wrapper__header header">
         <div class="header-container">
             <div class="header-inner">
