--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Змейка удачи 2025</title>
 </head>
 <body class="main"> qwe
-    <header class="wrapper__header header">
+    <header class="wrapper__header header"> qwe
         <div class="header-container">
             <div class="header-inner">
                 <div class="header-inner__logo logo">
