--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1080, initial-scale=0">
     <title>Змейка удачи 2025</title>
+    <link rel="stylesheet" href="./static/css/mainPageStyle/mainStyle.css">
 </head>
 <body class="main"> qwe
     <header class="wrapper__header header"> qwe
