--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         </div>
     </div>
     <div class="main-game">
+        <img class="main-game-snake" src="./static/icons/mainPageIcons/snake.png" />
         <div class="main-game-step" id="step_1">1</div>
         <div class="main-game-step" id="step_2">2</div>
         <div class="main-game-step" id="step_3">3</div>
