--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Змейка удачи 2025</title>
     <link rel="stylesheet" href="./static/css/mainPageStyle/mainStyle.css">
 </head>
-<body class="main"> qwe
-    <header class="wrapper__header header"> qwe
+<body class="main">
+    <header class="wrapper__header header">
         <div class="header-container">
             <div class="header-inner">
                 <div class="header-inner__logo logo">
@@ -33,6 +33,7 @@
         <h1 class="main-logo__heading">
             ЗМЕЙКА УДАЧИ
         </h1>
+        <img class="main-logo__image" src="static/icons/mainPageIcons/year.png" />
     </div>
     <div class="info-block-container">
         <div class="wrapper-suppliers">
@@ -73,16 +74,19 @@
             <div class="draw-date-container">
                 <div class="draw-date">
                     <div class="draw-date-checkbox">
+                        <img class="draw-date-checkbox-icon" src="static/icons/mainPageIcons/drawIconYes.png" alt="" />
                     </div>
                     <span class="draw-date-text">розыгрыш призов с 1 по 7</span>
                 </div>
                 <div class="draw-date">
                     <div class="draw-date-checkbox">
+                        <img class="draw-date-checkbox-icon" src="static/icons/mainPageIcons/drawIconNot.png" alt="" />
                     </div>
                     <span class="draw-date-text">розыгрыш призов с 8 по 14</span>
                 </div>
                 <div class="draw-date">
                     <div class="draw-date-checkbox">
+                        <img class="draw-date-checkbox-icon" src="static/icons/mainPageIcons/drawIconNot.png" alt="" />
                     </div>
                     <span class="draw-date-text">розыгрыш призов с 15 по 21</span>
                 </div>
