--- a/pages/conditionsPage.html
+++ b/pages/conditionsPage.html
@@ -87,8 +87,8 @@
     <div class="week-prizes-container">
         <div class="week-prizes-heading-container">
             <div class="week-prizes-text-container">
-                <h2 class="week-prizes-heading">ГЛАВНЫЕ ПРИЗЫ</h2>
-                <span class="week-prizes-text">Дойдите до финиша и получите возможность участвовать в розыгрыше главных призов!</span>
+                <h2 class="week-prizes-heading">ЕЖЕНЕДЕЛЬНЫЕ ПРИЗЫ</h2>
+                <span class="week-prizes-text">Регистрируй больше чеков и получите больше шансов на победу каждую неделю!</span>
             </div>
             <div class="week-prizes-snake">
                 <img class="week-prizes-snake-icon" src="../static/icons/conditionsPageIcons/snakeMiniRotate.png">
