--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1080, initial-scale=0">
+<!--    <meta name="viewport" content="width=1080, initial-scale=0">-->
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Змейка удачи 2025</title>
     <link rel="stylesheet" href="./static/css/mainPageStyle/mainStyle.css">
 </head>
@@ -11,7 +13,7 @@
         <div class="header-container">
             <div class="header-inner">
                 <div class="header-inner__logo logo">
-                    <img class="logo__image" src="./static/icons/anixLogo.png" alt="Лого Аникс" />
+                    <img class="logo__image" src="static/images/anixLogo.png" alt="Лого Аникс" />
                 </div>
                 <nav class="header-inner__navigation navigation" >
                     <ul class="navigation-menu">
@@ -33,28 +35,28 @@
         <h1 class="main-logo__heading">
             ЗМЕЙКА УДАЧИ
         </h1>
-        <img class="main-logo__image" src="static/icons/mainPageIcons/year.png" />
+        <img class="main-logo__image" src="static/images/mainPageIcons/year.png" />
     </div>
     <div class="info-block-container">
         <div class="wrapper-suppliers">
             <div class="suppliers-container suppliers">
                 <h2 class="suppliers__heading">Поставщики</h2>
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/1_1.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/1_2.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/1_3.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/1_4.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/2_1.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/2_2.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/2_3.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/2_4.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/3_1.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/3_2.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/3_3.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/3_4.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/4_1.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/4_2.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/4_3.png" alt= />
-                <img class="suppliers__image" src="./static/icons/suppliersIcon/4_4.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/1_1.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/1_2.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/1_3.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/1_4.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/2_1.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/2_2.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/2_3.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/2_4.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/3_1.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/3_2.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/3_3.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/3_4.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/4_1.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/4_2.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/4_3.png" alt= />
+                <img class="suppliers__image" src="static/images/suppliersIcon/4_4.png" alt= />
             </div>
         </div>
         <div class="profile-and-date-container">
@@ -64,6 +66,7 @@
                     <span class="profile-avatar-fio">Егор <br/> Черников</span>
                 </div>
                 <div class="toys-container">
+                    <img class="toys-icon" src="static/images/mainPageIcons/toyIcon.png" />
                     <span class="toys-count">2 шт</span>
                 </div>
                 <div class="complete-progress">
@@ -74,19 +77,19 @@
             <div class="draw-date-container">
                 <div class="draw-date">
                     <div class="draw-date-checkbox">
-                        <img class="draw-date-checkbox-icon" src="static/icons/mainPageIcons/drawIconYes.png" alt="" />
+                        <img class="draw-date-checkbox-icon" src="static/images/mainPageIcons/drawIconYes.png" alt="" />
                     </div>
                     <span class="draw-date-text">розыгрыш призов с 1 по 7</span>
                 </div>
                 <div class="draw-date">
                     <div class="draw-date-checkbox">
-                        <img class="draw-date-checkbox-icon" src="static/icons/mainPageIcons/drawIconNot.png" alt="" />
+                        <img class="draw-date-checkbox-icon" src="static/images/mainPageIcons/drawIconNot.png" alt="" />
                     </div>
                     <span class="draw-date-text">розыгрыш призов с 8 по 14</span>
                 </div>
                 <div class="draw-date">
                     <div class="draw-date-checkbox">
-                        <img class="draw-date-checkbox-icon" src="static/icons/mainPageIcons/drawIconNot.png" alt="" />
+                        <img class="draw-date-checkbox-icon" src="static/images/mainPageIcons/drawIconNot.png" alt="" />
                     </div>
                     <span class="draw-date-text">розыгрыш призов с 15 по 21</span>
                 </div>
@@ -94,7 +97,7 @@
         </div>
     </div>
     <div class="main-game">
-        <img class="main-game-snake" src="./static/icons/mainPageIcons/snake.png" />
+        <img class="main-game-snake" src="static/images/mainPageIcons/snake.png" />
         <div class="main-game-step" id="step_1">1</div>
         <div class="main-game-step" id="step_2">2</div>
         <div class="main-game-step" id="step_3">3</div>
