--- a/pages/conditionsPage.html
+++ b/pages/conditionsPage.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <div class="header-inner">
                 <div class="header-inner__logo logo">
-                    <img class="logo__image" src="../static/icons/anixLogo.png" alt="Лого Аникс" />
+                    <img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" />
                 </div>
                 <nav class="header-inner__navigation navigation" >
                     <ul class="navigation-menu">
@@ -33,13 +33,13 @@
     </header>
     <div class="guide-container">
         <h2 class="guide-heading">КАК УЧАСТВОВАТЬ В РОЗЫГРЫШЕ</h2>
-<!--        <img class="guide-steps-image" src="../static/icons/conditionsPageIcons/stepsIcon.png" alt="" />-->
+<!--        <img class="guide-steps-image" src="../static/images/conditionsPageIcons/stepsIcon.png" alt="" />-->
         <div class="guide-steps-container">
-            <img class="guide-steps-icon" src="../static/icons/conditionsPageIcons/stepOneIcon.png" />
-            <img class="guide-arrow-icon" src="../static/icons/conditionsPageIcons/arrowStepIcon.png" />
-            <img class="guide-steps-icon" src="../static/icons/conditionsPageIcons/stepTwoIcon.png" />
-            <img class="guide-arrow-icon" src="../static/icons/conditionsPageIcons/arrowStepIcon.png" />
-            <img class="guide-steps-icon" src="../static/icons/conditionsPageIcons/stepThreeIcon.png" />
+            <img class="guide-steps-icon" src="../static/images/conditionsPageIcons/stepOneIcon.png" />
+            <img class="guide-arrow-icon" src="../static/images/conditionsPageIcons/arrowStepIcon.png" />
+            <img class="guide-steps-icon" src="../static/images/conditionsPageIcons/stepTwoIcon.png" />
+            <img class="guide-arrow-icon" src="../static/images/conditionsPageIcons/arrowStepIcon.png" />
+            <img class="guide-steps-icon" src="../static/images/conditionsPageIcons/stepThreeIcon.png" />
         </div>
         <div class="guide-text-container">
             <span class="guide-text">
@@ -62,7 +62,7 @@
     <div class="main-prizes-container">
         <div class="main-prizes-heading-container">
             <div class="main-prizes-snake">
-                <img class="main-prizes-snake-icon" src="../static/icons/conditionsPageIcons/snakeMiniIcon.png">
+                <img class="main-prizes-snake-icon" src="../static/images/conditionsPageIcons/snakeMiniIcon.png">
             </div>
             <div class="main-prizes-text-container">
                 <h2 class="main-prizes-heading">ГЛАВНЫЕ ПРИЗЫ</h2>
@@ -71,15 +71,15 @@
         </div>
         <div class="main-prizes-icon-container">
             <div class="icon-wrapper">
-                <img class="main-prizes-tvIcon" src="../static/icons/conditionsPageIcons/tvIcon.png" />
+                <img class="main-prizes-tvIcon" src="../static/images/conditionsPageIcons/tvIcon.png" />
                 <span class="main-prizes-icon-text">LED-телевизор диагональ 65 дюймов</span>
             </div>
             <div class="icon-wrapper">
-                <img class="main-prizes-playIcon" src="../static/icons/conditionsPageIcons/playstationIcon.png" />
+                <img class="main-prizes-playIcon" src="../static/images/conditionsPageIcons/playstationIcon.png" />
                 <span class="main-prizes-icon-text">Игровая консоль PlayStation 5 Slim</span>
             </div>
             <div class="icon-wrapper">
-                <img class="main-prizes-holodilnikIcon" src="../static/icons/conditionsPageIcons/holodilnikIcon.png" />
+                <img class="main-prizes-holodilnikIcon" src="../static/images/conditionsPageIcons/holodilnikIcon.png" />
                 <span class="main-prizes-icon-text">Холодильник  LG с морозильником</span>
             </div>
         </div>
@@ -91,28 +91,28 @@
                 <span class="week-prizes-text">Регистрируй больше чеков и получите больше шансов на победу каждую неделю!</span>
             </div>
             <div class="week-prizes-snake">
-                <img class="week-prizes-snake-icon" src="../static/icons/conditionsPageIcons/snakeMiniRotate.png">
+                <img class="week-prizes-snake-icon" src="../static/images/conditionsPageIcons/snakeMiniRotate.png">
             </div>
         </div>
         <div class="week-prizes-icon-container">
             <div class="week-grill-prize-container week-icon-container">
-                <img class="week-grill-prize-icon week-icon" src="../static/icons/conditionsPageIcons/grillIcon.png" alt="" />
+                <img class="week-grill-prize-icon week-icon" src="../static/images/conditionsPageIcons/grillIcon.png" alt="" />
                 <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
             </div>
             <div class="week-aerogrill-prize-container week-icon-container">
-                <img class="week-aerogrill-prize-icon week-icon" src="../static/icons/conditionsPageIcons/aerogrillIcon.png" alt="" />
+                <img class="week-aerogrill-prize-icon week-icon" src="../static/images/conditionsPageIcons/aerogrillIcon.png" alt="" />
                 <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
             </div>
             <div class="week-yandex-prize-container week-icon-container">
-                <img class="week-yandex-prize-icon week-icon" src="../static/icons/conditionsPageIcons/yandexStationIcon.png" alt="" />
+                <img class="week-yandex-prize-icon week-icon" src="../static/images/conditionsPageIcons/yandexStationIcon.png" alt="" />
                 <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
             </div>
             <div class="week-robot-prize-container week-icon-container">
-                <img class="week-robot-prize-icon week-icon" src="../static/icons/conditionsPageIcons/robotIcon.png" alt="" />
+                <img class="week-robot-prize-icon week-icon" src="../static/images/conditionsPageIcons/robotIcon.png" alt="" />
                 <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
             </div>
             <div class="week-biggrill-prize-container week-icon-container">
-                <img class="week-biggrill-prize-icon week-icon" src="../static/icons/conditionsPageIcons/bigGrillIcon.png" alt="" />
+                <img class="week-biggrill-prize-icon week-icon" src="../static/images/conditionsPageIcons/bigGrillIcon.png" alt="" />
                 <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
             </div>
         </div>
