Сделал страницу условий Сделал мобильную верстку для 2 страниц 31.10

--- a/pages/conditionsPage.html
+++ b/pages/conditionsPage.html
@@ -2,121 +2,153 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-  <!--    <meta name="viewport"-->
-  <!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>-->
-  <meta name="viewport" content="width=1080, initial-scale=0">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
   <title>Змейка удачи 2025</title>
   <link rel="stylesheet" href="../static/css/conditionsPageStyle/conditionsMainStyle.css">
 </head>
-<body class="main-conditions-wrapper">
-    <header class="wrapper__header header">
-        <div class="header-container">
-            <div class="header-inner">
-                <div class="header-inner__logo logo">
-                    <img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" />
+<body>
+    <div class="main-conditions-wrapper">
+        <header class="wrapper__header header">
+            <div class="header-container">
+                <div class="header-inner">
+                    <div class="header-inner__logo logo">
+                        <img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" />
+                    </div>
+                    <nav class="header-inner__navigation navigation" >
+                        <ul class="navigation-menu">
+                            <li class="navigation-menu__item">
+                                Условия
+                            </li>
+                            <li class="navigation-menu__item">
+                                Подарки
+                            </li>
+                            <li class="navigation-menu__item">
+                                Поставщики
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="header-inner__navigation navigation" >
-                    <ul class="navigation-menu">
-                        <li class="navigation-menu__item">
-                            Условия
-                        </li>
-                        <li class="navigation-menu__item">
-                            Подарки
-                        </li>
-                        <li class="navigation-menu__item">
-                            Поставщики
-                        </li>
-                    </ul>
-                </nav>
+            </div>
+        </header>
+        <div class="guide-container">
+            <span class="guide-heading">КАК УЧАСТВОВАТЬ В РОЗЫГРЫШЕ</span>
+            <div class="guide-steps-container">
+                <img class="guide-steps-icon" src="../static/images/conditionsPageImages/stepOneIcon.png" />
+                <img class="guide-arrow-icon" src="../static/images/conditionsPageImages/arrowStepIcon.png" />
+                <img class="guide-steps-icon" src="../static/images/conditionsPageImages/stepTwoIcon.png" />
+                <img class="guide-arrow-icon" src="../static/images/conditionsPageImages/arrowStepIcon.png" />
+                <img class="guide-steps-icon" src="../static/images/conditionsPageImages/stepThreeIcon.png" />
+            </div>
+            <div class="guide-text-container">
+                <span class="guide-text">
+                        Совершайте покупки* в “Аникс”
+                        на сумму от 500 р. в период
+                        с 21.11.2024 г. по 07.01.2025 г.
+                </span>
+                <span class="guide-text">
+                        Регистрируй чеки на кассе
+                        или на сайте: promo.tdanix.ru
+                        и получите шанс выиграть приз!
+                </span>
+                <span class="guide-text">
+                        10 января 2025 года программа
+                        автоматически выберет победителей
+                        которые получат главные призы.
+                </span>
             </div>
         </div>
-    </header>
-    <div class="guide-container">
-        <h2 class="guide-heading">КАК УЧАСТВОВАТЬ В РОЗЫГРЫШЕ</h2>
-<!--        <img class="guide-steps-image" src="../static/images/conditionsPageIcons/stepsIcon.png" alt="" />-->
-        <div class="guide-steps-container">
-            <img class="guide-steps-icon" src="../static/images/conditionsPageIcons/stepOneIcon.png" />
-            <img class="guide-arrow-icon" src="../static/images/conditionsPageIcons/arrowStepIcon.png" />
-            <img class="guide-steps-icon" src="../static/images/conditionsPageIcons/stepTwoIcon.png" />
-            <img class="guide-arrow-icon" src="../static/images/conditionsPageIcons/arrowStepIcon.png" />
-            <img class="guide-steps-icon" src="../static/images/conditionsPageIcons/stepThreeIcon.png" />
+        <div class="main-prizes-container">
+            <div class="main-prizes-heading-container">
+                <div class="main-prizes-snake">
+                    <img class="main-prizes-snake-icon" src="../static/images/conditionsPageImages/snakeMiniIcon.png">
+                </div>
+                <div class="main-prizes-text-container">
+                    <span class="main-prizes-heading">ГЛАВНЫЕ ПРИЗЫ</span>
+                    <span class="main-prizes-text">Дойдите до финиша и получите возможность участвовать в розыгрыше главных призов!</span>
+                </div>
+            </div>
+            <div class="main-prizes-icon-container">
+                <div class="icon-wrapper">
+                    <img class="main-prizes-tvIcon" src="../static/images/conditionsPageImages/tvIcon.png" />
+                    <span class="main-prizes-icon-text">LED-телевизор диагональ 65 дюймов</span>
+                </div>
+                <div class="icon-wrapper">
+                    <img class="main-prizes-playIcon" src="../static/images/conditionsPageImages/playstationIcon.png" />
+                    <span class="main-prizes-icon-text">Игровая консоль PlayStation 5 Slim</span>
+                </div>
+                <div class="icon-wrapper">
+                    <img class="main-prizes-holodilnikIcon" src="../static/images/conditionsPageImages/holodilnikIcon.png" />
+                    <span class="main-prizes-icon-text">Холодильник  LG с морозильником</span>
+                </div>
+            </div>
         </div>
-        <div class="guide-text-container">
-            <span class="guide-text">
-                    Совершайте покупки* в “Аникс”
-                    на сумму от 500 р. в период
-                    с 21.11.2024 г. по 07.01.2025 г.
-            </span>
-            <span class="guide-text">
-                    Регистрируй чеки на кассе
-                    или на сайте: promo.tdanix.ru
-                    и получите шанс выиграть приз!
-            </span>
-            <span class="guide-text">
-                    10 января 2025 года программа
-                    автоматически выберет победителей
-                    которые получат главные призы.
-            </span>
+        <div class="week-prizes-container">
+            <div class="week-prizes-heading-container">
+                <div class="week-prizes-text-container">
+                    <span class="week-prizes-heading">ЕЖЕНЕДЕЛЬНЫЕ ПРИЗЫ</span>
+                    <span class="week-prizes-text">Регистрируй больше чеков и получите больше шансов на победу каждую неделю!</span>
+                </div>
+                <div class="week-prizes-snake">
+                    <img class="week-prizes-snake-icon" src="../static/images/conditionsPageImages/snakeMiniRotate.png">
+                </div>
+            </div>
+            <div class="week-prizes-icon-container">
+                <div class="week-grill-prize-container week-icon-container">
+                    <img class="week-grill-prize-icon week-icon" src="../static/images/conditionsPageImages/grillIcon.png" alt="" />
+                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                </div>
+                <div class="week-aerogrill-prize-container week-icon-container">
+                    <img class="week-aerogrill-prize-icon week-icon" src="../static/images/conditionsPageImages/aerogrillIcon.png" alt="" />
+                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                </div>
+                <div class="week-yandex-prize-container week-icon-container">
+                    <img class="week-yandex-prize-icon week-icon" src="../static/images/conditionsPageImages/yandexStationIcon.png" alt="" />
+                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                </div>
+                <div class="week-robot-prize-container week-icon-container">
+                    <img class="week-robot-prize-icon week-icon" src="../static/images/conditionsPageImages/robotIcon.png" alt="" />
+                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                </div>
+                <div class="week-biggrill-prize-container week-icon-container">
+                    <img class="week-biggrill-prize-icon week-icon" src="../static/images/conditionsPageImages/bigGrillIcon.png" alt="" />
+                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                </div>
+            </div>
+        </div>
+        <div class="prizes-per-store-container">
+            <div class="prizes-per-store-header">
+                <div class="prizes-per-store-text-container">
+                    <span class="prizes-per-store-heading">ПРИЗЫ В КАЖДОМ МАГАЗИНЕ</span>
+                    <span class="prizes-per-store-text">В финале конкурса разыгрываем игрушку “Стич” в каждом магазине!</span>
+                </div>
+                <div class="store-elipse-header"></div>
+            </div>
+            <div class="prizes-per-store-footer">
+                <img class="stich-image" src="../static/images/conditionsPageImages/stichImage.png" alt="" />
+                <div class="store-elipse-footer"></div>
+            </div>
+        </div>
+        <div class="first-finalists-container">
+            <div class="first-finalists-header">
+                <div class="first-finalists-text-container">
+                    <span class="first-finalists-heading">ПЕРВЫЕ 100 ФИНАЛИСТОВ</span>
+                    <span class="first-finalists-text">Первые 100 человек дошедшие до финала получат шоперы!</span>
+                </div>
+                <div class="finalists-elipse-header"></div>
+            </div>
+            <div class="first-finalists-footer">
+                <img class="shoper-image" src="../static/images/conditionsPageImages/shoperImage.png" alt="" />
+                <div class="finalists-elipse-footer"></div>
+            </div>
+        </div>
+        <div class="prizes-from-suppliers-container">
+            <span class="prizes-from-suppliers-heading">ПРИЗЫ ОТ ПАРТНЕРОВ</span>
+            <span class="prizes-from-suppliers-text">Покупайте товары наших партнеров, оставляйте отзывы и выигрывайте больше призов!</span>
         </div>
     </div>
-    <div class="main-prizes-container">
-        <div class="main-prizes-heading-container">
-            <div class="main-prizes-snake">
-                <img class="main-prizes-snake-icon" src="../static/images/conditionsPageIcons/snakeMiniIcon.png">
-            </div>
-            <div class="main-prizes-text-container">
-                <h2 class="main-prizes-heading">ГЛАВНЫЕ ПРИЗЫ</h2>
-                <span class="main-prizes-text">Дойдите до финиша и получите возможность участвовать в розыгрыше главных призов!</span>
-            </div>
-        </div>
-        <div class="main-prizes-icon-container">
-            <div class="icon-wrapper">
-                <img class="main-prizes-tvIcon" src="../static/images/conditionsPageIcons/tvIcon.png" />
-                <span class="main-prizes-icon-text">LED-телевизор диагональ 65 дюймов</span>
-            </div>
-            <div class="icon-wrapper">
-                <img class="main-prizes-playIcon" src="../static/images/conditionsPageIcons/playstationIcon.png" />
-                <span class="main-prizes-icon-text">Игровая консоль PlayStation 5 Slim</span>
-            </div>
-            <div class="icon-wrapper">
-                <img class="main-prizes-holodilnikIcon" src="../static/images/conditionsPageIcons/holodilnikIcon.png" />
-                <span class="main-prizes-icon-text">Холодильник  LG с морозильником</span>
-            </div>
-        </div>
-    </div>
-    <div class="week-prizes-container">
-        <div class="week-prizes-heading-container">
-            <div class="week-prizes-text-container">
-                <h2 class="week-prizes-heading">ЕЖЕНЕДЕЛЬНЫЕ ПРИЗЫ</h2>
-                <span class="week-prizes-text">Регистрируй больше чеков и получите больше шансов на победу каждую неделю!</span>
-            </div>
-            <div class="week-prizes-snake">
-                <img class="week-prizes-snake-icon" src="../static/images/conditionsPageIcons/snakeMiniRotate.png">
-            </div>
-        </div>
-        <div class="week-prizes-icon-container">
-            <div class="week-grill-prize-container week-icon-container">
-                <img class="week-grill-prize-icon week-icon" src="../static/images/conditionsPageIcons/grillIcon.png" alt="" />
-                <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
-            </div>
-            <div class="week-aerogrill-prize-container week-icon-container">
-                <img class="week-aerogrill-prize-icon week-icon" src="../static/images/conditionsPageIcons/aerogrillIcon.png" alt="" />
-                <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
-            </div>
-            <div class="week-yandex-prize-container week-icon-container">
-                <img class="week-yandex-prize-icon week-icon" src="../static/images/conditionsPageIcons/yandexStationIcon.png" alt="" />
-                <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
-            </div>
-            <div class="week-robot-prize-container week-icon-container">
-                <img class="week-robot-prize-icon week-icon" src="../static/images/conditionsPageIcons/robotIcon.png" alt="" />
-                <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
-            </div>
-            <div class="week-biggrill-prize-container week-icon-container">
-                <img class="week-biggrill-prize-icon week-icon" src="../static/images/conditionsPageIcons/bigGrillIcon.png" alt="" />
-                <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
-            </div>
-        </div>
-    </div>
-<div></div>
+    <footer class="footer">
+        <img class="footer-elka" src="../static/images/elkaImage.png" />
+    </footer>
 </body>
 </html>
